up down detection speed (frontend hack) + chart gap fix

--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -27,7 +27,7 @@ html #root {
 .cardbody {
     margin: 0 auto;
     color: black;
-    padding: 0;
+    padding: 5% !important;
 }
 
 .cardtext {
